--- a/SourceMINI58/Keil/Nu_Link_Driver.ini
+++ b/SourceMINI58/Keil/Nu_Link_Driver.ini
@@ -1,9 +1,9 @@
 [Version]
 Nu_LinkVersion=V3.9
 [Process]
-ProcessID=0x000005ac
-ProcessCreationTime_L=0x3ee3dc3d
-ProcessCreationTime_H=0x01d19d02
+ProcessID=0x0000037c
+ProcessCreationTime_L=0xc81c4483
+ProcessCreationTime_H=0x01d19eb3
 NuLinkID=0x18000549
 NuLinkID0=0x18000549
 NuLinkIDs_Count=0x00000001
