--- a/SourceMINI58/Keil/Nu_Link_Driver.ini
+++ b/SourceMINI58/Keil/Nu_Link_Driver.ini
@@ -1,9 +1,9 @@
 [Version]
 Nu_LinkVersion=V3.9
 [Process]
-ProcessID=0x0000192c
-ProcessCreationTime_L=0x37e6156c
-ProcessCreationTime_H=0x01d1a6a4
+ProcessID=0x00001538
+ProcessCreationTime_L=0xf7068a57
+ProcessCreationTime_H=0x01d1a756
 NuLinkID=0x18000549
 NuLinkID0=0x18000549
 NuLinkIDs_Count=0x00000001
